--- a/index.html
+++ b/index.html
@@ -1,11 +1,97 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="ko">
+  <head>
     <meta charset="UTF-8">
-    <title>나의 첫 홈페이지</title>
-</head>
-<body>
-    <h1>안녕하세요! 제 홈페이지에 오신 걸 환영합니다.</h1>
-    <p>Hosting.kr에서 산 도메인을 연결할 예정입니다.</p>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>가림 인테리어</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="icon" href="rogo.ico" type="image/x-icon">
+  </head>
+  <body style="background-color: #F4F3ED;">
+  <!-- 네비게이션 -->
+<header class="bg-[#F4F3ED] shadow">
+  <div class="max-w-6xl mx-auto p-4 flex justify-between items-center">
+    <h1>
+      <a href="index.html">
+        <img src="garim.png" alt="가림 인테리어" style="height: 80px;">
+      </a>
+    </h1>
+    <nav class="flex items-center space-x-4">
+      <a href="about.html" class="hover:text-green-700 font-medium">가림 소개</a>
+      <a href="portfolio.html" class="hover:text-green-700 font-medium">시공 사례</a>
+      <a href="contact.html" class="hover:text-green-700 font-medium">견적 문의</a>
+      <a href="location.html" class="hover:text-green-700 font-medium">오시는 길</a>
+    </nav>
+  </div>
+</header>
+  
+  <!-- Hero -->
+<section class="relative h-[80vh] overflow-hidden">
+  <!-- ✅ 슬라이드 이미지 컨테이너 -->
+  <div id="slider" class="h-full w-full flex transition-transform duration-700">
+    <img src="main_01.jpg" class="w-full h-full object-cover flex-shrink-0" />
+    <img src="main_02.jpg" class="w-full h-full object-cover flex-shrink-0" />
+    <img src="main_03.jpg" class="w-full h-full object-cover flex-shrink-0" />
+    <img src="main_04.jpg" class="w-full h-full object-cover flex-shrink-0" />
+  </div>
+
+  <!-- ✅ 텍스트 오버레이 -->
+  <div class="absolute inset-0 flex flex-col items-center justify-center text-center px-4 bg-black/30">
+    <h2 class="text-white text-2xl md:text-3xl font-semibold mb-2">토탈인테리어 시공전문</h2>
+    <h1 class="text-white text-4xl md:text-6xl font-bold mb-3">가림인테리어</h1>
+    <p class="text-yellow-300 text-lg md:text-xl font-medium">오랜 현장경험과 노하우로 완벽한 시공</p>
+  </div>
+
+  <!-- ✅ 양옆 화살표 -->
+  <button onclick="prevSlide()" class="absolute left-4 top-1/2 transform -translate-y-1/2 bg-black/50 text-white p-2 rounded-full z-10">
+    &#10094;
+  </button>
+  <button onclick="nextSlide()" class="absolute right-4 top-1/2 transform -translate-y-1/2 bg-black/50 text-white p-2 rounded-full z-10">
+    &#10095;
+  </button>
+</section>
+
+<!-- ✅ 슬라이드 제어 스크립트 -->
+<script>
+  const slider = document.getElementById('slider');
+  const slides = slider.children;
+  const totalSlides = slides.length;
+  let currentIndex = 0;
+
+  function updateSlider() {
+    slider.style.transform = `translateX(-${currentIndex * 100}%)`;
+  }
+
+  function nextSlide() {
+    currentIndex = (currentIndex + 1) % totalSlides;
+    updateSlider();
+  }
+
+  function prevSlide() {
+    currentIndex = (currentIndex - 1 + totalSlides) % totalSlides;
+    updateSlider();
+  }
+
+  setInterval(nextSlide, 3000); // 자동 슬라이드 3초 간격
+</script>
+
+
+  <!-- 포트폴리오 -->
+  <section id="portfolio" class="bg-[#F4F3ED] py-16">
+    <div class="max-w-6xl mx-auto px-4">
+      <h2 class="text-3xl font-semibold mb-8">시공 사례</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+        <img src="https://source.unsplash.com/400x300/?livingroom" class="rounded shadow" />
+        <img src="https://source.unsplash.com/400x300/?kitchen" class="rounded shadow" />
+        <img src="https://source.unsplash.com/400x300/?office" class="rounded shadow" />
+      </div>
+    </div>
+  </section>
+
+  <!-- 푸터 -->
+  <footer class="bg-gray-800 text-white text-center py-6">
+    © 2025 가림 인테리어 | ㅇㅇ시 ㅇㅇ구 ㅇㅇ로 000번길 00 | 전화: 010-0000-0000 | 이메일: abc123@naver.com
+  </footer>
 </body>
 </html>
